@@ -8,6 +8,7 @@ import com.github.pagehelper.PageHelper;
 import com.kp.framework.common.cache.ProjectCache;
 import com.kp.framework.common.properties.RedisSecurityConstant;
 import com.kp.framework.entity.bo.DictionaryBO;
+import com.kp.framework.entity.bo.KPResult;
 import com.kp.framework.modules.logRecord.enums.JournalStatusEnum;
 import com.kp.framework.modules.logRecord.mapper.InterfaceLogHistoryMapper;
 import com.kp.framework.modules.logRecord.mapper.InterfaceLogMapper;
@@ -31,28 +32,28 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 /**
- * @Author lipeng
- * @Description 系统内部接口调用记录 服务实现类
- * @Date 2025-05-21
- **/
+ * 系统内部接口调用记录 服务实现类。
+ * @author lipeng
+ * 2025-05-21
+ */
 @Service
 public class InterfaceLogService extends ServiceImpl<InterfaceLogMapper, InterfaceLogPO> {
 
     @Autowired
     private InterfaceLogHistoryMapper interfaceLogHistoryMapper;
 
-    private String redisKeyByProject = RedisSecurityConstant.AUTHENTICATION + "interface:log:project";
+    private final String redisKeyByProject = RedisSecurityConstant.AUTHENTICATION + "interface:log:project";
 
-    private String redisKeyByInterfaceName = RedisSecurityConstant.AUTHENTICATION + "interface:log:interface:name:";
+    private final String redisKeyByInterfaceName = RedisSecurityConstant.AUTHENTICATION + "interface:log:interface:name:";
 
     /**
-     * @Author lipeng
-     * @Description 查询系统内部接口调用记录列表
-     * @Date 2025-05-21
-     * @param interfaceLogListParamPO
-     * @return java.util.List<InterfaceLogPO>
-     **/
-    public List<?> queryPageList(InterfaceLogListParamPO interfaceLogListParamPO) {
+     * 查询系统内部接口调用记录列表。
+     * @author lipeng
+     * 2025-05-21
+     * @param interfaceLogListParamPO 查询参数
+     * @return com.kp.framework.entity.bo.KPResult<?>
+     */
+    public KPResult<?> queryPageList(InterfaceLogListParamPO interfaceLogListParamPO) {
         PageHelper.startPage(interfaceLogListParamPO.getPageNum(), interfaceLogListParamPO.getPageSize(), interfaceLogListParamPO.getOrderBy(InterfaceLogPO.class));
 
         if (interfaceLogListParamPO.getLevel().equals(JournalStatusEnum.NEWEST_JOURNAL.code())) {
@@ -70,33 +71,33 @@ public class InterfaceLogService extends ServiceImpl<InterfaceLogMapper, Interfa
                     .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getStatus()), InterfaceLogPO::getStatus, interfaceLogListParamPO.getStatus())
                     .like(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getMessage()), InterfaceLogPO::getMessage, interfaceLogListParamPO.getMessage())
                     .between(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getCallTime()), InterfaceLogPO::getCallTime, KPLocalDateTimeUtil.getWeeHours(interfaceLogListParamPO.getCallTime()), KPLocalDateTimeUtil.getWitchingHour(interfaceLogListParamPO.getCallTime()));
-            return this.baseMapper.selectList(queryWrapper);
+            return KPResult.list(this.baseMapper.selectList(queryWrapper));
         }
 
-        return interfaceLogHistoryMapper.selectList(new LambdaQueryWrapper<>(InterfaceLogHistoryPO.class)
-                .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getProjectName()), InterfaceLogHistoryPO::getProjectName, interfaceLogListParamPO.getProjectName())
-                .like(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getUri()), InterfaceLogHistoryPO::getUri, interfaceLogListParamPO.getUri())
-                .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getName()), InterfaceLogHistoryPO::getName, interfaceLogListParamPO.getName())
-                .like(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getParameters()), InterfaceLogHistoryPO::getParameters, interfaceLogListParamPO.getParameters())
-                .like(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getResult()), InterfaceLogHistoryPO::getResult, interfaceLogListParamPO.getResult())
-                .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getClinetIp()), InterfaceLogHistoryPO::getClinetIp, interfaceLogListParamPO.getClinetIp())
-                .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getIdentification()), InterfaceLogHistoryPO::getIdentification, interfaceLogListParamPO.getIdentification())
-                .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getIdentificationName()), InterfaceLogHistoryPO::getIdentificationName, interfaceLogListParamPO.getIdentificationName())
-                .like(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getPhone()), InterfaceLogHistoryPO::getPhone, interfaceLogListParamPO.getPhone())
-                .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getSerial()), InterfaceLogHistoryPO::getSerial, interfaceLogListParamPO.getSerial())
-                .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getStatus()), InterfaceLogHistoryPO::getStatus, interfaceLogListParamPO.getStatus())
-                .like(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getMessage()), InterfaceLogHistoryPO::getMessage, interfaceLogListParamPO.getMessage())
-                .between(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getCallTime()), InterfaceLogHistoryPO::getCallTime, KPLocalDateTimeUtil.getWeeHours(interfaceLogListParamPO.getCallTime()), KPLocalDateTimeUtil.getWitchingHour(interfaceLogListParamPO.getCallTime())));
+        return KPResult.list(
+                interfaceLogHistoryMapper.selectList(new LambdaQueryWrapper<>(InterfaceLogHistoryPO.class)
+                        .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getProjectName()), InterfaceLogHistoryPO::getProjectName, interfaceLogListParamPO.getProjectName())
+                        .like(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getUri()), InterfaceLogHistoryPO::getUri, interfaceLogListParamPO.getUri())
+                        .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getName()), InterfaceLogHistoryPO::getName, interfaceLogListParamPO.getName())
+                        .like(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getParameters()), InterfaceLogHistoryPO::getParameters, interfaceLogListParamPO.getParameters())
+                        .like(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getResult()), InterfaceLogHistoryPO::getResult, interfaceLogListParamPO.getResult())
+                        .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getClinetIp()), InterfaceLogHistoryPO::getClinetIp, interfaceLogListParamPO.getClinetIp())
+                        .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getIdentification()), InterfaceLogHistoryPO::getIdentification, interfaceLogListParamPO.getIdentification())
+                        .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getIdentificationName()), InterfaceLogHistoryPO::getIdentificationName, interfaceLogListParamPO.getIdentificationName())
+                        .like(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getPhone()), InterfaceLogHistoryPO::getPhone, interfaceLogListParamPO.getPhone())
+                        .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getSerial()), InterfaceLogHistoryPO::getSerial, interfaceLogListParamPO.getSerial())
+                        .eq(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getStatus()), InterfaceLogHistoryPO::getStatus, interfaceLogListParamPO.getStatus())
+                        .like(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getMessage()), InterfaceLogHistoryPO::getMessage, interfaceLogListParamPO.getMessage())
+                        .between(KPStringUtil.isNotEmpty(interfaceLogListParamPO.getCallTime()), InterfaceLogHistoryPO::getCallTime, KPLocalDateTimeUtil.getWeeHours(interfaceLogListParamPO.getCallTime()), KPLocalDateTimeUtil.getWitchingHour(interfaceLogListParamPO.getCallTime())))
+        );
     }
 
-
     /**
-     * @Author lipeng
-     * @Description 查询接口所属项目
-     * @Date 2025/5/21
-     * @param
-     * @return java.lang.Object
-     **/
+     * 查询接口所属项目。
+     * @author lipeng
+     * 2025/5/21
+     * @return java.util.List<com.kp.framework.entity.bo.DictionaryBO>
+     */
     public List<DictionaryBO> queryProject() {
         if (KPRedisUtil.hasKey(redisKeyByProject))
             return KPJsonUtil.toJavaObjectList(KPRedisUtil.get(redisKeyByProject), DictionaryBO.class);
@@ -107,7 +108,7 @@ public class InterfaceLogService extends ServiceImpl<InterfaceLogMapper, Interfa
                 .select(InterfaceLogPO::getProjectName)
                 .groupBy(InterfaceLogPO::getProjectName));
 
-        interfaceLogPOList.stream().filter(interfaceLogPO -> KPStringUtil.isNotEmpty(interfaceLogPO.getProjectName())).collect(Collectors.toList()).forEach(interfaceLogPO -> {
+        interfaceLogPOList.stream().filter(interfaceLogPO -> KPStringUtil.isNotEmpty(interfaceLogPO.getProjectName())).toList().forEach(interfaceLogPO -> {
             body.add(new DictionaryBO()
                     .setLabel(interfaceLogPO.getProjectName())
                     .setValue(interfaceLogPO.getProjectName()));
@@ -117,7 +118,7 @@ public class InterfaceLogService extends ServiceImpl<InterfaceLogMapper, Interfa
         List<InterfaceLogHistoryPO> interfaceLogHistoryPOList = interfaceLogHistoryMapper.selectList(new LambdaQueryWrapper<>(InterfaceLogHistoryPO.class)
                 .select(InterfaceLogHistoryPO::getProjectName)
                 .groupBy(InterfaceLogHistoryPO::getProjectName));
-        interfaceLogHistoryPOList.stream().filter(interfaceLogPO -> KPStringUtil.isNotEmpty(interfaceLogPO.getProjectName())).collect(Collectors.toList()).forEach(interfaceLogPO -> {
+        interfaceLogHistoryPOList.stream().filter(interfaceLogPO -> KPStringUtil.isNotEmpty(interfaceLogPO.getProjectName())).toList().forEach(interfaceLogPO -> {
             if (map.get(interfaceLogPO.getProjectName()) == null) {
                 body.add(new DictionaryBO()
                         .setLabel(interfaceLogPO.getProjectName())
@@ -125,10 +126,10 @@ public class InterfaceLogService extends ServiceImpl<InterfaceLogMapper, Interfa
             }
         });
 
-        if (body.size() != 0) KPRedisUtil.set(redisKeyByProject, body, 2, TimeUnit.HOURS);
+        if (KPStringUtil.isNotEmpty(body)) KPRedisUtil.set(redisKeyByProject, body, 2, TimeUnit.HOURS);
 
         //如果没有任何记录 就查询项目 避免前端报错
-        if (body.size() == 0) {
+        if (KPStringUtil.isEmpty(body)) {
             ProjectCache.getProjectList().forEach(projectPO -> {
                 body.add(new DictionaryBO()
                         .setLabel(projectPO.getProjectName())
@@ -138,14 +139,13 @@ public class InterfaceLogService extends ServiceImpl<InterfaceLogMapper, Interfa
         return body;
     }
 
-
     /**
-     * @Author lipeng
-     * @Description 根据查询详情
-     * @Date 2025-05-21
-     * @param parameter
-     * @return InterfaceLogPO
-     **/
+     * 根据查询详情。
+     * @author lipeng
+     * 2025-05-21
+     * @param parameter 查询参数
+     * @return com.kp.framework.modules.logRecord.po.InterfaceLogPO
+     */
     public InterfaceLogPO queryDetailsById(JSONObject parameter) {
         InterfaceLogPO interfaceLogPO = KPJsonUtil.toJavaObject(parameter, InterfaceLogPO.class);
         KPVerifyUtil.notNull(interfaceLogPO.getUuid(), "请输入uuid");
@@ -155,14 +155,13 @@ public class InterfaceLogService extends ServiceImpl<InterfaceLogMapper, Interfa
         return KPJsonUtil.toJavaObject(interfaceLogHistoryMapper.selectById(interfaceLogPO.getUuid()), InterfaceLogPO.class);
     }
 
-
     /**
-     * @Author lipeng
-     * @Description 查询内部接口名称
-     * @Date 2025/5/21
-     * @param parameter
+     * 查询内部接口名称。
+     * @author lipeng
+     * 2025/5/21
+     * @param parameter 查询参数
      * @return java.util.List<com.kp.framework.entity.bo.DictionaryBO>
-     **/
+     */
     public List<DictionaryBO> queryInterfaceName(JSONObject parameter) {
         KPVerifyUtil.notNull(parameter.getString("projectName"), "请输入项目名称！");
 
@@ -176,7 +175,7 @@ public class InterfaceLogService extends ServiceImpl<InterfaceLogMapper, Interfa
                 .eq(InterfaceLogPO::getProjectName, parameter.getString("projectName"))
                 .groupBy(InterfaceLogPO::getName));
 
-        interfaceLogPOList.stream().filter(interfaceLogPO -> KPStringUtil.isNotEmpty(interfaceLogPO.getName())).collect(Collectors.toList()).forEach(interfaceLogPO -> {
+        interfaceLogPOList.stream().filter(interfaceLogPO -> KPStringUtil.isNotEmpty(interfaceLogPO.getName())).toList().forEach(interfaceLogPO -> {
             if (KPStringUtil.isNotEmpty(interfaceLogPO.getName())) {
                 body.add(new DictionaryBO()
                         .setLabel(interfaceLogPO.getName())
@@ -190,7 +189,7 @@ public class InterfaceLogService extends ServiceImpl<InterfaceLogMapper, Interfa
                 .select(InterfaceLogHistoryPO::getName)
                 .eq(InterfaceLogHistoryPO::getProjectName, parameter.getString("projectName"))
                 .groupBy(InterfaceLogHistoryPO::getName));
-        interfaceLogHistoryPOList.stream().filter(interfaceLogPO -> KPStringUtil.isNotEmpty(interfaceLogPO.getProjectName())).collect(Collectors.toList()).forEach(interfaceLogPO -> {
+        interfaceLogHistoryPOList.stream().filter(interfaceLogPO -> KPStringUtil.isNotEmpty(interfaceLogPO.getProjectName())).toList().forEach(interfaceLogPO -> {
             if (map.get(interfaceLogPO.getName()) == null) {
                 body.add(new DictionaryBO()
                         .setLabel(interfaceLogPO.getName())
@@ -198,31 +197,26 @@ public class InterfaceLogService extends ServiceImpl<InterfaceLogMapper, Interfa
             }
         });
 
-        if (body.size() != 0) KPRedisUtil.set(redisKey, body, 2, TimeUnit.HOURS);
+        if (KPStringUtil.isNotEmpty(body)) KPRedisUtil.set(redisKey, body, 2, TimeUnit.HOURS);
         return body;
     }
 
-
     /**
-     * @Author lipeng
-     * @Description 清空接口缓存
-     * @Date 2025/5/21
-     * @param
-     * @return void
-     **/
+     * 清空接口缓存。
+     * @author lipeng
+     * 2026/1/16 2025/5/21
+     */
     public void clearCache() {
         KPRedisUtil.remove(redisKeyByProject);
         KPRedisUtil.removeBacth(redisKeyByInterfaceName);
     }
 
-
     /**
-     * @Author lipeng
-     * @Description 查询接口日志的项目名称
-     * @Date 2025/6/12
-     * @param
+     * 查询接口日志的项目名称。
+     * @author lipeng
+     * 2025/6/12
      * @return java.util.List<com.kp.framework.entity.bo.DictionaryBO>
-     **/
+     */
     public List<DictionaryBO> queryProjectName() {
         if (KPRedisUtil.hasKey(redisKeyByProject))
             return KPJsonUtil.toJavaObjectList(KPRedisUtil.get(redisKeyByProject), DictionaryBO.class);
@@ -232,26 +226,23 @@ public class InterfaceLogService extends ServiceImpl<InterfaceLogMapper, Interfa
                 .groupBy(InterfaceLogPO::getProjectName);
 
         List<DictionaryBO> row = new ArrayList<>();
-        this.baseMapper.selectList(queryWrapper).stream().filter(interfaceLogPO -> KPStringUtil.isNotEmpty(interfaceLogPO.getProjectName())).collect(Collectors.toList()).forEach(interfaceLogPO -> {
+        this.baseMapper.selectList(queryWrapper).stream().filter(interfaceLogPO -> KPStringUtil.isNotEmpty(interfaceLogPO.getProjectName())).toList().forEach(interfaceLogPO -> {
             row.add(new DictionaryBO()
                     .setLabel(interfaceLogPO.getProjectName())
                     .setValue(interfaceLogPO.getProjectName()));
         });
 
-        if (row.size() != 0)
-            KPRedisUtil.set(redisKeyByProject, KPJsonUtil.toJsonString(row), 2, TimeUnit.HOURS);
-
+        if (KPStringUtil.isNotEmpty(row)) KPRedisUtil.set(redisKeyByProject, KPJsonUtil.toJsonString(row), 2, TimeUnit.HOURS);
         return row;
     }
 
-
     /**
-     * @Author lipeng
-     * @Description 查询接口调用次数列表
-     * @Date 2025/6/12
-     * @param parameter
+     * 查询接口调用次数列表。
+     * @author lipeng
+     * 2025/6/12
+     * @param parameter 查询参数
      * @return java.util.List<com.kp.framework.modules.logRecord.po.customer.InterfaceCallListCustomerPO>
-     **/
+     */
     public List<InterfaceCallListCustomerPO> queryInterfaceCallList(JSONObject parameter) {
         String redisKey = RedisSecurityConstant.AUTHENTICATION + "interface:interfaceCallList:" + parameter.toJSONString();
         if (KPRedisUtil.hasKey(redisKey))
@@ -269,6 +260,4 @@ public class InterfaceLogService extends ServiceImpl<InterfaceLogMapper, Interfa
         KPRedisUtil.set(redisKey, KPJsonUtil.toJsonString(result), 2, TimeUnit.HOURS);
         return result;
     }
-
-
 }
